--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@ title: About
         <h1>Zimu Guan</h1>
         <ul>
             <li><a href="./assets/CV.pdf">CV</a></li>
-            <li>Email: <a href="mailto:zimug2@illinois.edu">zimug2@illinois.edu</a></li>
+            <li>Email: <a href="mailto:z6guan@ucsd.edu">z6guan@ucsd.edu</a></li>
             <li>GitHub: <a href="https://github.com/TaKeTube">TaKeTube</a></li>
-            <li>Linkedin: Zimu Guan</li>
+            <li>Linkedin: <a href="https://www.linkedin.com/in/zimu-guan-354b1621a/">Zimu Guan</a></li>
         </ul>
     </div>
 </div>
@@ -21,11 +21,10 @@ title: About
 
 <div class = "experience">
     <h2>Biography</h2>
-    <p> Hi! I'm Zimu, a senior Computer Engineering student from the joint institute of <a href="https://www.zju.edu.cn/english/">Zhejiang University</a> - 
-        <a href="https://illinois.edu/"> University of Illinois at Urbana-Champaign</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based simulation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
+    <p> Hi! I'm Zimu, a first-year Computer Science student from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based simulation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
     </p>
     <p>
-        Outside of the classroom, I've been studying math on my own, 
+        I've been studying math on my own, 
         some of my learning notes and blogs (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
         that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
         one of the initiations of my interest in math.
@@ -38,6 +37,16 @@ title: About
 
 <div class = "experience">
     <h2>Education</h2>
+    <div class="row">
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/ucsd.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>University of California, San Diego</b>, Sept. 2022 - Jan. 2024<br>
+                M.S. in Computer Science<br>
+            </p>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-1-pad" align="center">
             <p><img src="assets/img/uiuc.png" class="img-fluid"></a></p>
@@ -64,6 +73,23 @@ title: About
 <div class="experience">
     <h2>Research & Work Experience</h2>
     <div class="row">
+        <p><b>Software Engineer Intern – Audio/Video Processing Infrastructure</b>, July. 2022 – Sept. 2022<br>
+            <i>Xinhua Zhiyun</i><br>
+            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
+            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
+            better understand the materials, attracted other sessions’ students to join in.<br> -->
+        </p>
+    </div>
+    <div class="row">
+        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
+            <i>ZJUI institute</i><br>
+            Instructor: Thomas Honold<br>
+            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
+            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
+            better understand the materials, attracted other sessions’ students to join in.<br> -->
+        </p>
+    </div>
+    <div class="row">
         <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
             <i>University of Illinois at Urbana-Champaign</i><br>
             Mentor: David Forsyth<br>
@@ -83,7 +109,7 @@ title: About
         </p>
     </div>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 241 CALCULUS III</b>, Sept. 2020 – Jan. 2021<br>
+        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
