update CV / fix small conflicts

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@ title: About
 
 
 <div class="experience">
-    <h2>Research Experience</h2>
+    <h2>Research & Work Experience</h2>
     <div class="row">
         <p><b>Software Engineer Intern – Audio/Video Processing Infrastructure</b>, July. 2022 – Sept. 2022<br>
             <i>Xinhua Zhiyun</i><br>
@@ -80,15 +80,15 @@ title: About
             better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
-            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
+            - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
             manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
+            better understand the materials, attracted other sessions’ students to join in.<br>
         </p>
-    </div>
+    </div> -->
     <div class="row">
         <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
             <i>University of Illinois at Urbana-Champaign</i><br>
@@ -108,7 +108,7 @@ title: About
             previous methods. -->
         </p>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
@@ -116,7 +116,7 @@ title: About
             manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
             better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
-    </div>
+    </div> -->
     <div class="row">
         <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
             <i>ZJUI institute</i><br>
@@ -142,7 +142,7 @@ title: About
         </p>
     </div>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 241 CALCULUS III</b>, Sept. 2020 – Jan. 2021<br>
+        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Lebesgue integral,
