--- a/about.html
+++ b/about.html
@@ -112,9 +112,9 @@ title: About
         <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
-            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
+            - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
             manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
+            better understand the materials, attracted other sessions’ students to join in.<br>
         </p>
     </div> -->
     <div class="row">
