--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ title: About
 
 <div class = "experience">
     <h2>Biography</h2>
-    <p> Hi! I'm Zimu, a first-year Computer Science student from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based simulation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
+    <p> I'm Zimu, a first-year master student in Computer Science from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based animation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
     </p>
     <p>
         I've been studying math on my own, 
@@ -156,11 +156,23 @@ title: About
     <h2>Project</h2>
     <div class="row">
         <div class="col-sm-4-pad" align="center">
+            <p><img src="assets/img/TCP.jpg" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>TCP based on UDP</b>, Oct. 2021<br>
+                <i>Course Project for ECE/CS 438 Communication Networks @ UIUC</i><br>
+                <br><br>
+                <a href="https://github.com/TaKeTube/ECE-438/tree/main/mp2">Code</a>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-4-pad" align="center">
             <p><img src="assets/img/TLEOS.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
-            <p><b>TLEOS (Unix based Operating System)</b>, Apr. 2021<br>
-                <i>Course Project for ECE 391 Computer Systems Engineering</i><br>
+            <p><b>TLEOS (Unix based Operating System)</b>, Apr. 2021 - May. 2021<br>
+                <i>Course Project for ECE 391 Computer Systems Engineering @ UIUC</i><br>
                 <br><br>
                 <a href="https://github.com/TaKeTube/TLEOS">Code</a>
             </p>
@@ -172,7 +184,7 @@ title: About
         </div>
         <div class="col-sm-8">
             <p><b>FPGA-Based 3D Graphics Renderer</b>, Dec. 2020<br>
-                <i>Final Project for ECE 385 Digital System Laboratory</i><br>
+                <i>Final Project for ECE 385 Digital System Laboratory @ UIUC</i><br>
                 <br><br><br>
                 <a href="https://github.com/TaKeTube/FPGA-based-3D-graphics-renderer">Code</a>
             </p>
@@ -196,7 +208,7 @@ title: About
         </div>
         <div class="col-sm-8">
             <p><b>Index Structure Database with Stack-based Query Processing</b>, May. 2020<br>
-                <i>Computing Assignment for CS225 Data Structure</i><br>
+                <i>Computing Assignment for CS225 Data Structure @ ZJUI</i><br>
                 <br><br>
                 <a href="https://github.com/TaKeTube/2SAM-Database">Code</a>
             </p>
