--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,42 @@ title: Gallery
         </p>
         </div> -->
         <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF0.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF1.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF2.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF3.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF4.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF5.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF6.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF7.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF8.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime0.jpg" 
             alt="&quot I saw the broken time &quot <br> 2019.08 at Dongguan street, Yangzhou, China"/>
         </div>
@@ -48,10 +84,10 @@ title: Gallery
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Sky0.jpg"
             alt="Sky | 2019.08 at Hangzhou, China"/>
         </div>
-        <div class="item">
+        <!-- <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Dusk0.jpg"
             alt="2019.07 at Haining, China"/>
-        </div>
+        </div> -->
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou0.jpg"
             alt="Suzhou | 2019.10 at Suzhou, China"/>
@@ -92,10 +128,10 @@ title: Gallery
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Sky1.jpg"
             alt="Sky | 2019.08 at Hangzhou, China"/>
         </div>
-        <div class="item">
+        <!-- <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Dusk1.jpg"
             alt="2019.07 at Haining, China"/>
-        </div>
+        </div> -->
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\Suzhou3.jpg"
             alt="Suzhou | 2019.10 at Suzhou, China"/>
