--- a/gallery.html
+++ b/gallery.html
@@ -24,40 +24,17 @@ title: Gallery
             quidem?<br>
         </p>
         </div> -->
+        <!-- COL 0 -->
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF0.jpg" 
             alt="San Francisco | 2021.12 at San Francisco, CA"/>
         </div>
         <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF1.jpg" 
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF1.png" 
             alt="San Francisco | 2021.12 at San Francisco, CA"/>
         </div>
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF2.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF3.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF4.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF5.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF6.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF7.jpg" 
-            alt="San Francisco | 2021.12 at San Francisco, CA"/>
-        </div>
-        <div class="item">
-            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF8.jpg" 
             alt="San Francisco | 2021.12 at San Francisco, CA"/>
         </div>
         <div class="item">
@@ -104,6 +81,20 @@ title: Gallery
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain4.jpg"
             alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
         </div>
+        
+        <!-- COL 1 -->
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF3.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF4.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF5.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime1.jpg"
             alt="&quot I saw the broken time &quot <br> 2019.08 at Dongguan street, Yangzhou, China"/>
@@ -143,6 +134,20 @@ title: Gallery
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\WestLakeRain1.jpg"
             alt="West Lake, Rain | 2019.08 at West Lake, Hangzhou, China"/>
+        </div>
+
+        <!-- COL 2 -->
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF6.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF7.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\SF8.jpg" 
+            alt="San Francisco | 2021.12 at San Francisco, CA"/>
         </div>
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\photo\BrokenTime2.jpg"
