update some small changes

--- a/about.html
+++ b/about.html
@@ -20,18 +20,18 @@ title: About
 
 
 <div class = "experience">
-    <h2>Biography</h2>
-    <p> I'm Zimu, a first-year master student in Computer Science from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b> (especially <b>rendering and physically based animation</b>). It is because I'm a big fan of <b>Math & Arts</b>:
+    <h2>About</h2>
+    <p> I'm Zimu, a first-year master student in Computer Science from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b>, particularly in <b>rendering and physically based animation</b>. This passion stems from my love for both <b>Math & Arts</b>:
     </p>
     <p>
-        I've been studying math on my own, 
+        I enjoy delving into mathematics on my own, 
         some of my learning notes and blogs (in Chinese) are posted <a href="./">here</a>. I am always fascinated by the process of generalization in mathematics, 
         that's why I chose the word, <b>"Abstractness is the price of Generality"</b>, as the tagline for my website. It is said by <a href="https://www.3blue1brown.com/about">3Blue1Brown</a>, 
         one of the initiations of my interest in math.
     </p>
     <p>
-        In my leisure time, I often draw, photograph or do some design. 
-        You can see some of my art works <a href="gallery.html">here</a>.
+        In my leisure time, I enjoy drawing, photography, and design. 
+        You can explore some of my artworks <a href="gallery.html">here</a>.
     </p>
 </div>
 
@@ -43,7 +43,7 @@ title: About
         </div>
         <div class="col-sm-11">
             <p><b>University of California, San Diego</b>, Sept. 2022 - Jan. 2024<br>
-                M.S. in Computer Science<br>
+                M.S. in Computer Science, Computer Graphics Track<br>
             </p>
         </div>
     </div>
@@ -73,7 +73,7 @@ title: About
 <div class="experience">
     <h2>Research & Work Experience</h2>
     <div class="row">
-        <p><b>Software Engineer Intern – Audio/Video Processing Infrastructure</b>, July. 2022 – Sept. 2022<br>
+        <p><b>Software Engineer Intern - Audio/Video Processing Infrastructure</b>, July. 2022 - Sept. 2022<br>
             <i>Xinhua Zhiyun</i><br>
             <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
             manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
@@ -81,7 +81,7 @@ title: About
         </p>
     </div>
     <!-- <div class="row">
-        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
+        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 - May. 2022<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
@@ -89,18 +89,18 @@ title: About
             better understand the materials, attracted other sessions’ students to join in.<br>
         </p>
     </div> -->
-    <div class="row">
-        <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 – Dec. 2021<br>
+    <!-- <div class="row">
+        <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 - Dec. 2021<br>
             <i>University of Illinois at Urbana-Champaign</i><br>
             Mentor: David Forsyth<br>
-            <!-- - Contributed to a project involving convincing cut-and-paste reshading with consistent image decomposition
-            inferences by creating a benchmark data set and evaluated the performance of the cut-and-paste neural renderer. -->
+            - Contributed to a project involving convincing cut-and-paste reshading with consistent image decomposition
+            inferences by creating a benchmark data set and evaluated the performance of the cut-and-paste neural renderer.
         </p>
-    </div>
+    </div> -->
     <div class="row">
-        <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, Apr. 2021 – Aug. 2021<br>
+        <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, Apr. 2021 - Aug. 2021<br>
             <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
-            Mentor: Jin Huang<br>
+            Mentor: <a href="http://www.cad.zju.edu.cn/home/hj/index.xml">Jin Huang</a><br>
             <!-- - Built a conformal unstructured all-hexahedral mesh refinement pipeline as a prototype aiming to improve
             physically-based animation, especially the adaptive finite element method.<br>
             - Researched existing hexahedral mesh optimization, generation, and refinement methods, transferred selective
@@ -109,7 +109,7 @@ title: About
         </p>
     </div>
     <!-- <div class="row">
-        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
+        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 - Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
@@ -118,7 +118,7 @@ title: About
         </p>
     </div> -->
     <div class="row">
-        <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 – Aug. 2019<br>
+        <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 - Aug. 2019<br>
             <i>ZJUI institute</i><br>
             Mentor: Liangjing yang<br>
             <!-- - Researched 3D reconstruction, integrated VisualSFM 3D reconstruction tool into a virtual reality robot-assisted
@@ -133,16 +133,16 @@ title: About
 <div class="experience">
     <h2>Teaching Experience</h2>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 – May. 2022<br>
+        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 - May. 2022<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Banach Fixed Point Theorem,
-            Picard–Lindelöf Theorem, parts of Fourier analysis, etc. Made videos and Geogebra scripts to help students
+            Picard-Lindelöf Theorem, parts of Fourier analysis, etc. Made videos and Geogebra scripts to help students
             better understand the materials, attracted other sessions’ students to join in.<br> -->
         </p>
     </div>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 – Jan. 2021<br>
+        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 - Jan. 2021<br>
             <i>ZJUI institute</i><br>
             Instructor: Thomas Honold<br>
             <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Lebesgue integral,
@@ -226,7 +226,7 @@ title: About
             <p><img src="assets/img/C&D.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
-            <p><b>Design Event Posters</b>, Sept. 2019 – Aug. 2020<br>
+            <p><b>Design Event Posters</b>, Sept. 2019 - Aug. 2020<br>
                 <i>New Media Center, International Campus, Zhejiang University</i><br>
                 <!-- Core member of creative design department. Always gave the overall framework of the poster design. Posters are used in graduation ceremony, activity propoganda, etc.<br> -->
             </p>
