--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ title: About
 
 <div class = "experience">
     <h2>About</h2>
-    <p> I'm Zimu, a first-year master student in Computer Science from the <a href="https://ucsd.edu/"> University of California, San Diego</a>. I'm interested in <b>computer graphics</b>, particularly in <b>rendering and physically based animation</b>. This passion stems from my love for both <b>Math & Arts</b>:
+    <p> I'm Zimu, a second-year master student in Computer Science @ <a href="https://ucsd.edu/"> UC San Diego</a>. I'm interested in <b>computer graphics</b>, particularly in <b>rendering and physically based animation</b>. This passion stems from my love for both <b>Math & Arts</b>:
     </p>
     <p>
         I enjoy delving into mathematics on my own, 
@@ -71,61 +71,48 @@ title: About
 
 
 <div class="experience">
-    <h2>Research & Work Experience</h2>
+    <h2>Professional Experience</h2>
     <div class="row">
-        <p><b>Software Engineer Intern - Audio/Video Processing Infrastructure</b>, July. 2022 - Sept. 2022<br>
-            <i>Xinhua Zhiyun</i><br>
-            <!-- - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
-            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
-        </p>
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/qualcomm.jfif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Graphics Engineer Intern @ Qualcomm Graphics Research</b> June - Sept. 2023<br>
+                <i>Qualcomm Inc.</i><br>
+            </p>
+        </div>
     </div>
-    <!-- <div class="row">
-        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 - May. 2022<br>
-            <i>ZJUI institute</i><br>
-            Instructor: Thomas Honold<br>
-            - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
-            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br>
-        </p>
-    </div> -->
-    <!-- <div class="row">
-        <p><b>Cut-and-Paste Neural Rendering</b>, Aug. 2021 - Dec. 2021<br>
-            <i>University of Illinois at Urbana-Champaign</i><br>
-            Mentor: David Forsyth<br>
-            - Contributed to a project involving convincing cut-and-paste reshading with consistent image decomposition
-            inferences by creating a benchmark data set and evaluated the performance of the cut-and-paste neural renderer.
-        </p>
-    </div> -->
     <div class="row">
-        <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, Apr. 2021 - Aug. 2021<br>
-            <i>State Key Lab of CAD & CG, Zhejiang University</i><br>
-            Mentor: <a href="http://www.cad.zju.edu.cn/home/hj/index.xml">Jin Huang</a><br>
-            <!-- - Built a conformal unstructured all-hexahedral mesh refinement pipeline as a prototype aiming to improve
-            physically-based animation, especially the adaptive finite element method.<br>
-            - Researched existing hexahedral mesh optimization, generation, and refinement methods, transferred selective
-            padding method for mesh optimization to mesh refinement, solved the limitation of inflexible density control of
-            previous methods. -->
-        </p>
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/xhzy.jfif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Software Engineer Intern - Audio/Video Processing Infra</b>, July. - Sept. 2022<br>
+                <i>Xinhua Zhiyun</i><br>
+            </p>
+        </div>
     </div>
-    <!-- <div class="row">
-        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 - Jan. 2021<br>
-            <i>ZJUI institute</i><br>
-            Instructor: Thomas Honold<br>
-            - Held discussion sessions every week and taught difficult concepts covered in the course, including Lebesgue integral,
-            manifolds, and differential forms for engineering students. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br>
-        </p>
-    </div> -->
     <div class="row">
-        <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 - Aug. 2019<br>
-            <i>ZJUI institute</i><br>
-            Mentor: Liangjing yang<br>
-            <!-- - Researched 3D reconstruction, integrated VisualSFM 3D reconstruction tool into a virtual reality robot-assisted
-            surgical system.<br>
-            - Technically supported other parts of the surgical system, including a unity-based virtual reality surgical
-            environment and an Arduino-based voice-controlled robotic arm.<br> -->
-        </p>
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/zju.png" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>All-hexahedral Mesh Refinement with Flexible Density Control</b>, <br>Apr. - Aug. 2021<br>
+                <i>State Key Lab of CAD & CG @ Zhejiang University</i><br>
+                Mentor: <a href="http://www.cad.zju.edu.cn/home/hj/index.xml">Jin Huang</a><br>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/zjui.jfif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Virtual Reality in Robot Assisted Surgical Training</b>, Jun. 2019 - Aug. 2019<br>
+                <i>ZJUI institute</i><br>
+                Mentor: Liangjing yang<br>
+            </p>
+        </div>
     </div>
 </div>
 
@@ -133,22 +120,26 @@ title: About
 <div class="experience">
     <h2>Teaching Experience</h2>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, Jan. 2022 - May. 2022<br>
-            <i>ZJUI institute</i><br>
-            Instructor: Thomas Honold<br>
-            <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Banach Fixed Point Theorem,
-            Picard-Lindelöf Theorem, parts of Fourier analysis, etc. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
-        </p>
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/zjui.jfif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Teaching Assistant for MATH 286 Intro to Differential Equation Plus</b>, <br>Jan. 2022 - May. 2022<br>
+                <i>ZJUI institute</i><br>
+                Instructor: Thomas Honold<br>
+            </p>
+        </div>
     </div>
     <div class="row">
-        <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 - Jan. 2021<br>
-            <i>ZJUI institute</i><br>
-            Instructor: Thomas Honold<br>
-            <!-- - Held discussion sessions every week and taught engineering students difficult topics covered in the course, including Lebesgue integral,
-            manifolds, and differential forms. Made videos and Geogebra scripts to help students
-            better understand the materials, attracted other sessions’ students to join in.<br> -->
-        </p>
+        <div class="col-sm-1-pad" align="center">
+            <p><img src="assets/img/zjui.jfif" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-11">
+            <p><b>Teaching Assistant for MATH 241 Calculus III</b>, Sept. 2020 - Jan. 2021<br>
+                <i>ZJUI institute</i><br>
+                Instructor: Thomas Honold<br>
+            </p>
+        </div>
     </div>
 </div>
 
@@ -156,25 +147,13 @@ title: About
     <h2>Project</h2>
     <div class="row">
         <div class="col-sm-4-pad" align="center">
-            <p><img src="assets/img/TCP.jpg" class="img-fluid"></a></p>
+            <p><img src="assets/img/TaKe2.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
-            <p><b>TCP based on UDP</b>, Oct. 2021<br>
-                <i>Course Project for ECE/CS 438 Communication Networks @ UIUC</i><br>
+            <p><b>TaKe Renderer</b>, Jan. 2023 - Present<br>
+                <i>A photorealistic path tracer with a robust feature set.</i><br>
                 <br><br>
-                <a href="https://github.com/TaKeTube/ECE-438/tree/main/mp2">Code</a>
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-4-pad" align="center">
-            <p><img src="assets/img/TLEOS.png" class="img-fluid"></a></p>
-        </div>
-        <div class="col-sm-8">
-            <p><b>TLEOS (Unix based Operating System)</b>, Apr. 2021 - May. 2021<br>
-                <i>Course Project for ECE 391 Computer Systems Engineering @ UIUC</i><br>
-                <br><br>
-                <a href="https://github.com/TaKeTube/TLEOS">Code</a>
+                <a href="https://spiny-study-7e5.notion.site/TaKe-Renderer-422a52b00809408a9c7df85b5bb070a9">Proj Page</a>
             </p>
         </div>
     </div>
@@ -192,19 +171,29 @@ title: About
     </div>
     <div class="row">
         <div class="col-sm-4-pad" align="center">
-            <p><img src="assets/img/raytracer.png" class="img-fluid"></a></p>
+            <p><img src="assets/img/TLEOS.png" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
-            <p><b>Monto Carlo Ray Tracer</b>, Dec. 2020<br>
-                <i>Computing Assignment for GAMES101 Introduction to Computer Graphics</i><br>
-                <br><br><br><br><br>
-                <a href="https://github.com/TaKeTube/GAMES-101/tree/master/Assignment7">Code</a>
+            <p><b>TLEOS (Unix based Operating System)</b>, Apr. 2021 - May. 2021<br>
+                <i>Course Project for ECE 391 Computer Systems Engineering @ UIUC</i><br>
+                <a href="https://github.com/TaKeTube/TLEOS">Code</a>
             </p>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-4-pad" align="center">
-            <!-- <p><img src="assets/img/BLANK.png" class="img-fluid"></a></p> -->
+            <p><img src="assets/img/TCP.jpg" class="img-fluid"></a></p>
+        </div>
+        <div class="col-sm-8">
+            <p><b>TCP based on UDP</b>, Oct. 2021<br>
+                <i>Course Project for ECE/CS 438 Communication Networks @ UIUC</i><br>
+                <br><br>
+                <a href="https://github.com/TaKeTube/ECE-438/tree/main/mp2">Code</a>
+            </p>
+        </div>
+    </div>
+    <!-- <div class="row">
+        <div class="col-sm-4-pad" align="center">
         </div>
         <div class="col-sm-8">
             <p><b>Index Structure Database with Stack-based Query Processing</b>, May. 2020<br>
@@ -213,10 +202,10 @@ title: About
                 <a href="https://github.com/TaKeTube/2SAM-Database">Code</a>
             </p>
         </div>
-    </div>
-    <div class="row">
+    </div> -->
+    <!-- <div class="row">
         <p>You can see details of my projects <a href="project.html">here</a>.</p>
-    </div>
+    </div> -->
 </div>
 
 <div class="experience">
@@ -232,15 +221,14 @@ title: About
             </p>
         </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-sm-4-pad" align="center">
             <p><img src="assets/img/AidEd.jpg" class="img-fluid"></a></p>
         </div>
         <div class="col-sm-8">
             <p><b>Aid Education in Remote Mountains of China</b>, Aug. 2019<br>
                 <i>Jiaoma Center School, Jiaoma, Qiannan, Guizhou, China</i><br>
-                <!-- 2 weeks volunteer teaching in the local primary school. Taught arts & English and loved by students. Visited students’ family deep in the mountains and local government staffs to investigate local education and poverty relief condition.<br> -->
             </p>
         </div>
-    </div>
+    </div> -->
 </div>
