--- a/gallery.html
+++ b/gallery.html
@@ -214,10 +214,10 @@ title: Gallery
             &quotFish&quot is a homonym for &quotdesires&quot in Chinese. The fish painting is originally painted by an ancient Chinese artist, Bada Shanren, from Ming dynasty. <br> 
             2019.07"/>
         </div>
-        <div class="item">
+        <!-- <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\Manifold.png"
             alt="Differential Manifold | 2020.10"/>
-        </div>
+        </div> -->
         <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\design\trumpet2.png"
             alt="A work related to a meme on the Chinese internet | 2019.09"/>
