--- a/gallery.html
+++ b/gallery.html
@@ -268,6 +268,14 @@ title: Gallery
     </div>
     <div class="masonry">
         <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\painting\Akebi.png"
+            alt="A copy of one of the pictures from TV Anime 明日ちゃんのセーラー服 ED | 2023.02"/>
+        </div>
+        <div class="item">
+            <img class="pop-img" loading="lazy" src="\assets\img\gallery\painting\Akebi2.png"
+            alt="A copy of one of the pictures from TV Anime 明日ちゃんのセーラー服 ED | 2023.02"/>
+        </div>
+        <div class="item">
             <img class="pop-img" loading="lazy" src="\assets\img\gallery\painting\koakuma.png"
             alt="A copy of illustrator FKEY's work | 2019.07"/>
         </div>
